getIntersectionList always returns empty NodeList until layout is complete https://bugs.webkit.org/show_bug.cgi?id=81423

Patch by Said Abou-Hallawa <sabouhallawa@apple.com> on 2017-02-08
Reviewed by Simon Fraser.

Source/WebCore:

Layout needs to be forced before trying to figure out which SVGElements
intersect with a given SVGRect. We do the same thing in the DOM API
Element::getBoundingClientRect().

Test: svg/custom/intersection-list-before-layout.html

* svg/SVGSVGElement.cpp:
(WebCore::SVGSVGElement::getIntersectionList):

LayoutTests:

* svg/custom/intersection-list-before-layout-expected.txt: Added.
* svg/custom/intersection-list-before-layout.html: Added.

Canonical link: https://commits.webkit.org/185044@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@211905 268f45cc-cd09-0410-ab3c-d52691b4dbfc